unpackaged/main/default/objects/Lead/fields/Account_Buying_stage_6sense__c.field-meta.xml
<CustomField>
    <fullName>Account_Buying_stage_6sense__c</fullName>
    <description>6sense</description>
    <inlineHelpText>6sense</inlineHelpText>
    <label>Account - Buying stage (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>