unpackaged/main/default/objects/Lead/fields/Account_Intent_Score_6sense__c.field-meta.xml
<CustomField>
    <fullName>Account_Intent_Score_6sense__c</fullName>
    <description>6sense</description>
    <inlineHelpText>6sense</inlineHelpText>
    <label>Account - Intent Score (6sense)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>