unpackaged/main/default/objects/Lead/fields/Account_Profile_Fit_6sense__c.field-meta.xml
<CustomField>
    <fullName>Account_Profile_Fit_6sense__c</fullName>
    <description>6sense</description>
    <inlineHelpText>6sense</inlineHelpText>
    <label>Account - Profile Fit (6sense)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>