unpackaged/main/default/objects/Lead/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default value set to checked - All newly created Leads are assumed Active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>