unpackaged/main/default/objects/Lead/fields/Address_6sense__c.field-meta.xml
<CustomField>
    <fullName>Address_6sense__c</fullName>
    <description>6sense</description>
    <inlineHelpText>6sense</inlineHelpText>
    <label>Address (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>