unpackaged/main/default/objects/Lead/fields/Client_ID_GA__c.field-meta.xml
<CustomField>
    <fullName>Client_ID_GA__c</fullName>
    <label>Client ID - GA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>