unpackaged/main/default/objects/Lead/fields/Cognism_Diamond_Record__c.field-meta.xml
<CustomField>
    <fullName>Cognism_Diamond_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cognism - A Diamond is a contact whose mobile number has been phone-verified.</description>
    <inlineHelpText>Cognism - A Diamond is a contact whose mobile number has been phone-verified.</inlineHelpText>
    <label>Cognism Diamond Record</label>
    <type>Checkbox</type>
</CustomField>