unpackaged/main/default/objects/Lead/fields/Communication_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Communication_Opt_Out_Date__c</fullName>
    <label>Communication - Opt-Out Date</label>
    <type>Date</type>
</CustomField>