unpackaged/main/default/objects/Lead/fields/Contact_Company_Intent_Score_6sense__c.field-meta.xml
<CustomField>
    <fullName>Contact_Company_Intent_Score_6sense__c</fullName>
    <label>Contact - Company Intent Score (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>