unpackaged/main/default/objects/Lead/fields/Contact_Profile_Score_6sense__c.field-meta.xml
<CustomField>
    <fullName>Contact_Profile_Score_6sense__c</fullName>
    <label>Contact - Profile Score (6sense)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>