unpackaged/main/default/objects/Lead/fields/Country_6sense__c.field-meta.xml
<CustomField>
    <fullName>Country_6sense__c</fullName>
    <description>6sense enrichment</description>
    <inlineHelpText>6sense enrichment</inlineHelpText>
    <label>Country (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>