unpackaged/main/default/objects/Lead/fields/Current_Stage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Reason__c</fullName>
    <label>Current Stage Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>---------- A. Procedural ----------</fullName>
            </value>
            <value>
                <fullName>Released due to SLA</fullName>
            </value>
            <value>
                <fullName>Not properly qualified</fullName>
            </value>
            <value>
                <fullName>Not my territory</fullName>
            </value>
            <value>
                <fullName>Working other targets</fullName>
            </value>
            <value>
                <fullName>Already working (duplicate)</fullName>
            </value>
            <value>
                <fullName>Already customer</fullName>
            </value>
            <value>
                <fullName>Clearing my workspace</fullName>
            </value>
            <value>
                <fullName>---------- B. Bad data ----------</fullName>
            </value>
            <value>
                <fullName>Left organization</fullName>
            </value>
            <value>
                <fullName>Not in relevant role</fullName>
            </value>
            <value>
                <fullName>Bad contact information</fullName>
            </value>
            <value>
                <fullName>Trash (Spam)</fullName>
            </value>
            <value>
                <fullName>---------- C. Failure to communicate ----------</fullName>
            </value>
            <value>
                <fullName>Could not engage</fullName>
            </value>
            <value>
                <fullName>Stopped communicating</fullName>
            </value>
            <value>
                <fullName>---------- D. Not looking for solution ----------</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Job seeker</fullName>
            </value>
            <value>
                <fullName>Not a business</fullName>
            </value>
            <value>
                <fullName>Unconfirmed possible need</fullName>
            </value>
            <value>
                <fullName>No problem to solve</fullName>
            </value>
            <value>
                <fullName>No interest in video</fullName>
            </value>
            <value>
                <fullName>---------- E. Need exists but cannot sell ----------</fullName>
            </value>
            <value>
                <fullName>Chose another solution</fullName>
            </value>
            <value>
                <fullName>Keeping existing solution</fullName>
            </value>
            <value>
                <fullName>Must work through 3rd party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>