unpackaged/main/default/objects/Lead/fields/DE_Company_Name_1st_Letter__c.field-meta.xml
<CustomField>
    <fullName>DE_Company_Name_1st_Letter__c</fullName>
    <formula>UPPER( LEFT( TRIM( Company ),1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DE - Company Name 1st Letter</label>
    <type>Text</type>
</CustomField>