unpackaged/main/default/objects/Lead/fields/DE_Days_From_Create__c.field-meta.xml
<CustomField>
    <fullName>DE_Days_From_Create__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DE - Days From Create</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>