unpackaged/main/default/objects/Lead/fields/DE_Lead_Territory__c.field-meta.xml
<CustomField>
    <fullName>DE_Lead_Territory__c</fullName>
    <formula>n2de__Distribution_engine_details__r.n2de__Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DE - Lead Territory</label>
    <type>Text</type>
</CustomField>