unpackaged/main/default/objects/Lead/fields/DE_Match_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>DE_Match_Account_Status__c</fullName>
    <formula>/*
If matched account = customer --&gt; &#39;customer&#39;
If matched account = named account --&gt; &#39;named account&#39;
*/
IF (
AND(
ISPICKVAL(n2de__Distribution_engine_details__r.n2de__Matched_account__r.Account_Stage__c,&quot;Customer&quot;),NOT(ISPICKVAL(n2de__Distribution_engine_details__r.n2de__Matched_account__r.Account_Stage__c,&quot;Former&quot;))
),&quot;customer&quot;,

IF ( n2de__Distribution_engine_details__r.n2de__Matched_account__r.Named_Account__c = true, &quot;named account&quot;, &quot;&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DE - Match Account Status</label>
    <type>Text</type>
</CustomField>