unpackaged/main/default/objects/Lead/fields/De_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>De_Offer_Type__c</fullName>
    <formula>IF(

OR (
NOT(ISBLANK( Last_Sales_Inquiry_Date__c )), 
NOT(ISBLANK( Last_Live_Chat_Date__c  )), 
NOT (ISBLANK( Last_Email_Clickthrough_Date__c  )),
NOT (ISBLANK(Last_Website_Visit_Date__c ))
)
,
&quot;Inquiry&quot;
,
IF(

OR(
NOT(ISBLANK(Last_Whitepaper_Download_Date__c)),
NOT(ISBLANK(Last_Email_Clickthrough_Date__c)),
NOT(ISBLANK(Last_Website_Visit_Date__c) )
)

,
&quot;Content&quot;,

IF(
OR(
NOT(ISBLANK(Last_Event_Attendance_Date__c)),
NOT(ISBLANK(Last_Webinar_Registration_Date__c)),
NOT(ISBLANK(Last_Event_Registration_Date__c))
)
,
&quot;Event&quot;
,
IF( 
OR(
NOT(ISBLANK(Last_Partner_Inquiry_Date__c)),
NOT(ISBLANK( Last_Partner_Referral_Date__c ))
)
,
&quot;partner inquiry&quot;
,

IF(

AND(
 DE_Days_From_Create__c &gt; 1, /*If the record has been created for more 2 days with no enrichment then it&#39;s generic*/
ISBLANK(Last_Whitepaper_Download_Date__c), /* Last Whitepaper Download Date*/
ISBLANK(Last_Sales_Inquiry_Date__c), /*Last Sales Inquiry Date*/
ISBLANK(Last_Event_Attendance_Date__c), /*ast Event Attendance Date*/
ISBLANK(Last_Webinar_Registration_Date__c), /*Last Webinar Registration Date*/
ISBLANK(Last_Event_Registration_Date__c), /*Last Event Registration Date*/
ISBLANK(Last_Live_Chat_Date__c) /*Last Live Chat Date*/




) , &quot;Generic&quot;,&quot;&quot;

)

) /*Partner Inquiry IF*/
) /*event IF*/
) /*Inquiry IF*/
)/*content IF*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>De - Offer Type</label>
    <type>Text</type>
</CustomField>