unpackaged/main/default/objects/Lead/fields/Default_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Contract_Type__c</fullName>
    <formula>&quot;Standard Term Contract&quot;</formula>
    <label>Default Contract Type</label>
    <type>Text</type>
</CustomField>