unpackaged/main/default/objects/Lead/fields/Email_Validation_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation_Status_Description__c</fullName>
    <label>Email Validation - Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>