unpackaged/main/default/objects/Lead/fields/Last_Sales_Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Inquiry_Date__c</fullName>
    <label>Last Sales Inquiry Date</label>
    <type>Date</type>
</CustomField>