unpackaged/main/default/objects/Lead/fields/Last_Trial_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Trial_Registration_Date__c</fullName>
    <label>Last Trial Registration Date</label>
    <type>Date</type>
</CustomField>