unpackaged/main/default/objects/Lead/fields/Last_Whitepaper_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Whitepaper_Download_URL__c</fullName>
    <label>Last Whitepaper Download URL</label>
    <type>Url</type>
</CustomField>