unpackaged/main/default/objects/Lead/fields/LeadGen_Consent_1__c.field-meta.xml
<CustomField>
    <fullName>LeadGen_Consent_1__c</fullName>
    <description>Linkedin Lead Gen - Custom Consent field 1 - Holds the copy of the question related to the field Consent 1 in Linkedin LeadGen</description>
    <inlineHelpText>Linkedin Lead Gen - Custom Consent field 1 - Holds the copy of the question related to the field Consent 1 in Linkedin LeadGen</inlineHelpText>
    <label>LeadGen - Consent 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>