unpackaged/main/default/objects/Lead/fields/LeadGen_Form__c.field-meta.xml
<CustomField>
    <fullName>LeadGen_Form__c</fullName>
    <description>Linkedin Lead Gen field used to map the Form field from the LeadGen WedForm</description>
    <inlineHelpText>Linkedin Lead Gen field used to map the Form field from the LeadGen WedForm</inlineHelpText>
    <label>LeadGen - Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>