unpackaged/main/default/objects/Lead/fields/LeadGen_H1_Value__c.field-meta.xml
<CustomField>
    <fullName>LeadGen_H1_Value__c</fullName>
    <description>Linkedin Lead Gen field used to map the Value of Hidden Field 1 from the LeadGen WedForm</description>
    <inlineHelpText>Linkedin Lead Gen field used to map the Value of Hidden Field 1 from the LeadGen WedForm</inlineHelpText>
    <label>LeadGen - H1 - Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>