unpackaged/main/default/objects/Lead/fields/LeadGen_Q1_Question__c.field-meta.xml
<CustomField>
    <fullName>LeadGen_Q1_Question__c</fullName>
    <description>Linkedin Lead Gen field used to map the Copy of Custom Question 1 from the LeadGen WedForm</description>
    <inlineHelpText>Linkedin Lead Gen field used to map the Copy of Custom Question 1 from the LeadGen WedForm</inlineHelpText>
    <label>LeadGen - Q1 - Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>