unpackaged/main/default/objects/Lead/fields/Phone_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_Opt_In_Date__c</fullName>
    <description>Captures the latest date on which the lead expressed their consent to receive phone communication from Brightcove.</description>
    <inlineHelpText>Captures the latest date on which the lead expressed their consent to receive phone communication from Brightcove.</inlineHelpText>
    <label>Phone - Opt-In Date</label>
    <type>Date</type>
</CustomField>