unpackaged/main/default/objects/Lead/fields/Sales_Territory_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory_Contact__c</fullName>
    <label>Sales Territory (Contact)</label>
    <length>35</length>
    <type>Text</type>
</CustomField>