unpackaged/main/default/objects/Lead/fields/SFDC_Test__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When TRUE/TICKED,this means this is a TEST RECORD. These records are deleted regularly.</description>
    <inlineHelpText>When TRUE/TICKED,this means this is a TEST RECORD. These records are deleted regularly.</inlineHelpText>
    <label>SFDC Test</label>
    <type>Checkbox</type>
</CustomField>