unpackaged/main/default/objects/Lead/fields/Solution_Line_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Solution_Line_Business_Unit__c</fullName>
    <label>Solution Line (Business Unit)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>