unpackaged/main/default/objects/Lead/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
                <default>true</default>
                <label>Name</label>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
            <value>
                <fullName>Actionable Response</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>